# computer_vision_project

./: CMakeLists.txt  README.md
dvo_core/src/core/: rgbd_image.cpp
include/: cv2_wrapper.h  kinect_device.h  libusb.h  mutex.h
mtf_additions/: Utilities.mak  common.h  inputUtils.h  kinectUtils.h  libfreenect.hpp  parameters.h  runMTFD.cc
src/: cv2_example.cpp  depth_tracking.cpp
src/object_tracking/include/camera_info/: device_A00363A00089102A.yaml  device_A00366A17003143A.yaml
src/object_tracking/include/kinect/: camera_intrinsics.h  cv2_wrapper.h  kinect_device.h  libusb.h  macros.h  mutex.h
src/object_tracking/src/examples/: cv2_example.cpp  cv2_wrapper_original.cpp
src/object_tracking/src/object_tracking/: depth_tracking.cpp
